--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,28 +31,25 @@ jobs:
       - name: Initial Environment
         env:
           ID_ED25519: ${{secrets.ed25519}}
-          SSH_USER: ${{secrets.SSH_USER}}
-          SSH_IP: ${{secrets.SSH_IP}}
-          SSH_PORT: ${{secrets.SSH_PORT}}
-          GOSUMDB: off
-          GOPROXY: direct
         run: |
-          export GOPRIVATE="github.com/WincerChan"
-          git config --global --add url."git@github.com:".insteadOf "https://github.com/"
           mkdir -p ~/.ssh
           echo "$ID_ED25519" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          printf "Host blog\n    HostName $SSH_IP\n    User $SSH_USER\n    Port $SSH_PORT" > ~/.ssh/config
-          { ssh-keyscan -p $SSH_PORT $SSH_IP 2> /dev/null; } >> ~/.ssh/known_hosts
 
       - name: Build
         env:
           GOPRIVATE: "github.com/WincerChan"
         run: |
-          cat config/_default/params.toml
-          go get github.com/WincerChan/BlogContent
           hugo --minify
-          $(go env GOPATH)/bin/BlogContent encrypt_posts.toml
 
       - name: Depoly
-        run: rsync -az -v --delete public/* blog:/usr/share/www/hexo
+        env:
+          username: ${{secrets.username}}
+          useremail: ${{secrets.useremail}}
+        run: |
+          cd public
+          git init
+          git config --global user.name "${username}"
+          git config --global user.email "${useremail}"
+          git commit -am "Auto Construct"
+          git push -f origin master
