--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,5 +52,6 @@ jobs:
           git init
           git config --global user.name "${username}"
           git config --global user.email "${useremail}"
-          git commit -am "Auto Construct"
+          git add .
+          git commit -m "Auto Construct"
           git push -f origin master
