--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,9 @@ jobs:
           cd public
           ls -la
           git init
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git remote add origin git@github.com:into-vyong/Cirrus.git
+          git config --global user.name "${username}"
+          git config --global user.email "${useremail}"
           git add .
           git commit -m "Auto Construct"
       - name: Push Github
