remove parent git

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,7 @@ jobs:
           username: ${{secrets.username}}
           useremail: ${{secrets.useremail}}
         run: |
+          rm -rf .git
           cd public
           ls -la
           git config --global user.name "${username}"
