--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://into-vyong.github.ui/"
+baseURL = "https://into-vyong.github.io/"
 languageCode = "en-us"
 title = "Vyong's Blog"
 hasCJKLanguage = true
